sumo/tests/duarouter/errors/no_net/options.duarouter
--trip-defs=increasing_trips.trips.xml -o routes.rou.xml
